[gd_scene load_steps=3 format=3 uid="uid://dhj2i7vawwhnx"]

[ext_resource type="Script" uid="uid://v3ot1ydrxl8b" path="res://scripts/menu/main_menu_buttons.gd" id="1_1y04j"]
[ext_resource type="PackedScene" uid="uid://brtlbuty384ai" path="res://scenes/UI/settings.tscn" id="2_klkgf"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 120

[node name="HSplitContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="Title" type="TextureRect" parent="MarginContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
stretch_mode = 4

[node name="MenuContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer" node_paths=PackedStringArray("settings")]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16
alignment = 1
script = ExtResource("1_1y04j")
intro_scene = "res://scenes/rooms/intro.tscn"
game_scene = "res://scenes/global/game.tscn"
settings = NodePath("../../../../Settings")

[node name="NewGameButton" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/MenuContainer"]
layout_mode = 2
text = "New Game"

[node name="ContinueButton" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/MenuContainer"]
layout_mode = 2
text = "Continue"

[node name="SettingsButton" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/MenuContainer"]
layout_mode = 2
text = "Settings"

[node name="CreditsButton" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/MenuContainer"]
layout_mode = 2
text = "Credits"

[node name="QuitButton" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer/MenuContainer"]
layout_mode = 2
text = "Quit"

[node name="Version" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
text = "v0.1"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Graphic" type="TextureRect" parent="MarginContainer/HSplitContainer/CenterContainer"]
layout_mode = 2
stretch_mode = 4

[node name="Settings" parent="." instance=ExtResource("2_klkgf")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/MenuContainer/NewGameButton" to="MarginContainer/HSplitContainer/VBoxContainer/MenuContainer" method="_new_game"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/MenuContainer/ContinueButton" to="MarginContainer/HSplitContainer/VBoxContainer/MenuContainer" method="_load_game"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/MenuContainer/SettingsButton" to="MarginContainer/HSplitContainer/VBoxContainer/MenuContainer" method="_open_settings"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/MenuContainer/CreditsButton" to="MarginContainer/HSplitContainer/VBoxContainer/MenuContainer" method="_goto_credits"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/MenuContainer/QuitButton" to="MarginContainer/HSplitContainer/VBoxContainer/MenuContainer" method="_quit_game"]
